// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Platform creates account using updatear method 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "platform",
      "airdrop": "",
      "platform_name": "test_platform",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 0,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 1,
      "sent_amount": "0.0000 SNAX",
      "step_number": 0,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "300.00000000000000000",
      "total_user_count": 1,
      "updating": 1,
    },
  ],
}
`;

exports[`Platform creates account using updatear method 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Platform creates account using updatear method 3`] = `Array []`;

exports[`Platform creates account using updatear method 4`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "attention_rate": "300.00000000000000000",
      "attention_rate_rating_position": 1,
      "id": 1007,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 10,
    },
  ],
}
`;

exports[`Platform creates accounts using updatearmult method 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "platform",
      "airdrop": "",
      "platform_name": "test_platform",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 0,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 4,
      "sent_amount": "0.0000 SNAX",
      "step_number": 0,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "600.00000000000000000",
      "total_user_count": 4,
      "updating": 1,
    },
  ],
}
`;

exports[`Platform creates accounts using updatearmult method 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Platform creates accounts using updatearmult method 3`] = `Array []`;

exports[`Platform creates accounts using updatearmult method 4`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "attention_rate": "0.00000000000000000",
      "attention_rate_rating_position": 4294967295,
      "id": 123,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 6,
    },
    Object {
      "attention_rate": "300.00000000000000000",
      "attention_rate_rating_position": 1,
      "id": 1007,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 10,
    },
    Object {
      "attention_rate": "50.00000000000000000",
      "attention_rate_rating_position": 3,
      "id": 1105,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 10,
    },
    Object {
      "attention_rate": "250.00000000000000000",
      "attention_rate_rating_position": 2,
      "id": 1200,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 10,
    },
  ],
}
`;

exports[`Platform should add account correctly 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "platform",
      "airdrop": "",
      "platform_name": "test_platform",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 1,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "0.0000 SNAX",
      "step_number": 0,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "0.00000000000000000",
      "total_user_count": 1,
      "updating": 0,
    },
  ],
}
`;

exports[`Platform should add account correctly 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Platform should add account correctly 3`] = `
Array [
  Object {
    "id": 123,
    "last_paid_step_number": 0,
    "name": "test2",
    "stat_diff": Array [
      5,
      10,
      15,
    ],
    "verification_salt": "12345",
    "verification_tweet": "1083836521751478272",
  },
]
`;

exports[`Platform should add account correctly 4`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "attention_rate": "0.00000000000000000",
      "attention_rate_rating_position": 0,
      "id": 123,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 0,
    },
  ],
}
`;

exports[`Platform should create user using newaccount method 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "platform",
      "airdrop": "",
      "platform_name": "test_platform",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 1,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "0.0000 SNAX",
      "step_number": 0,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "0.00000000000000000",
      "total_user_count": 1,
      "updating": 0,
    },
  ],
}
`;

exports[`Platform should create user using newaccount method 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Platform should create user using newaccount method 3`] = `
Array [
  Object {
    "id": 65,
    "last_paid_step_number": 0,
    "name": "created11",
    "stat_diff": Array [
      0,
      0,
      0,
    ],
    "verification_salt": "hello",
    "verification_tweet": 43,
  },
]
`;

exports[`Platform should create user using newaccount method 4`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "attention_rate": "0.00000000000000000",
      "attention_rate_rating_position": 0,
      "id": 65,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 0,
    },
  ],
}
`;

exports[`Platform should drop pending account correctly 1`] = `Array []`;

exports[`Platform should drop pending account correctly 2`] = `
Array [
  Object {
    "account": "test1",
    "id": 40,
  },
]
`;

exports[`Platform should drop pending account correctly 3`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "platform",
      "airdrop": "",
      "platform_name": "test_platform",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 0,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "0.0000 SNAX",
      "step_number": 0,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "0.00000000000000000",
      "total_user_count": 0,
      "updating": 0,
    },
  ],
}
`;

exports[`Platform should drop pending account correctly 4`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Platform should drop pending account correctly 5`] = `Array []`;

exports[`Platform should drop pending account correctly 6`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Platform should initialize correctly 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "platform",
      "airdrop": "",
      "platform_name": "test_platform",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 0,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "0.0000 SNAX",
      "step_number": 0,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "0.00000000000000000",
      "total_user_count": 0,
      "updating": 0,
    },
  ],
}
`;

exports[`Platform should initialize correctly 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Platform should initialize correctly 3`] = `Array []`;

exports[`Platform should initialize correctly 4`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Platform should process next round correctly 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "platform",
      "airdrop": "",
      "platform_name": "test_platform",
      "registered_attention_rate": "600.00000000000000000",
      "registered_user_count": 4,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 4,
      "sent_amount": "0.0000 SNAX",
      "step_number": 0,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "600.00000000000000000",
      "total_user_count": 4,
      "updating": 2,
    },
  ],
}
`;

exports[`Platform should process next round correctly 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Platform should process next round correctly 3`] = `
Array [
  Object {
    "id": 123,
    "last_paid_step_number": 0,
    "name": "testacc1",
    "stat_diff": Array [
      50,
      11,
      25,
      50,
    ],
    "verification_salt": "12345",
    "verification_tweet": "1083836521751478272",
  },
  Object {
    "id": 1007,
    "last_paid_step_number": 0,
    "name": "testacc1",
    "stat_diff": Array [
      51,
      10,
      210,
      30,
    ],
    "verification_salt": "12345",
    "verification_tweet": "1083836521751478272",
  },
  Object {
    "id": 1105,
    "last_paid_step_number": 0,
    "name": "testacc2",
    "stat_diff": Array [
      5,
      10,
      20,
      30,
    ],
    "verification_salt": "12345",
    "verification_tweet": "1083836521751478272",
  },
  Object {
    "id": 1200,
    "last_paid_step_number": 0,
    "name": "testacc2",
    "stat_diff": Array [
      51,
      120,
      210,
      30,
    ],
    "verification_salt": "12345",
    "verification_tweet": "1083836521751478272",
  },
]
`;

exports[`Platform should process next round correctly 4`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "attention_rate": "0.00000000000000000",
      "attention_rate_rating_position": 4294967295,
      "id": 123,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 6,
    },
    Object {
      "attention_rate": "300.00000000000000000",
      "attention_rate_rating_position": 1,
      "id": 1007,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 10,
    },
    Object {
      "attention_rate": "50.00000000000000000",
      "attention_rate_rating_position": 3,
      "id": 1105,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 10,
    },
    Object {
      "attention_rate": "250.00000000000000000",
      "attention_rate_rating_position": 2,
      "id": 1200,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 10,
    },
  ],
}
`;

exports[`Platform should process next round correctly 5`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2313899131.2000 SNAX",
      },
    ],
  },
]
`;

exports[`Platform should process next round correctly 6`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "platform",
      "airdrop": "",
      "platform_name": "test_platform",
      "registered_attention_rate": "600.00000000000000000",
      "registered_user_count": 4,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 4,
      "sent_amount": "0.0000 SNAX",
      "step_number": 0,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "600.00000000000000000",
      "total_user_count": 4,
      "updating": 3,
    },
  ],
}
`;

exports[`Platform should process next round correctly 7`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Platform should process next round correctly 8`] = `
Array [
  Object {
    "id": 123,
    "last_paid_step_number": 0,
    "name": "testacc1",
    "stat_diff": Array [
      50,
      11,
      25,
      50,
    ],
    "verification_salt": "12345",
    "verification_tweet": "1083836521751478272",
  },
  Object {
    "id": 1007,
    "last_paid_step_number": 0,
    "name": "testacc1",
    "stat_diff": Array [
      51,
      10,
      210,
      30,
    ],
    "verification_salt": "12345",
    "verification_tweet": "1083836521751478272",
  },
  Object {
    "id": 1105,
    "last_paid_step_number": 0,
    "name": "testacc2",
    "stat_diff": Array [
      5,
      10,
      20,
      30,
    ],
    "verification_salt": "12345",
    "verification_tweet": "1083836521751478272",
  },
  Object {
    "id": 1200,
    "last_paid_step_number": 0,
    "name": "testacc2",
    "stat_diff": Array [
      51,
      120,
      210,
      30,
    ],
    "verification_salt": "12345",
    "verification_tweet": "1083836521751478272",
  },
]
`;

exports[`Platform should process next round correctly 9`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "attention_rate": "0.00000000000000000",
      "attention_rate_rating_position": 4294967295,
      "id": 123,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 6,
    },
    Object {
      "attention_rate": "300.00000000000000000",
      "attention_rate_rating_position": 1,
      "id": 1007,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 10,
    },
    Object {
      "attention_rate": "50.00000000000000000",
      "attention_rate_rating_position": 3,
      "id": 1105,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 10,
    },
    Object {
      "attention_rate": "250.00000000000000000",
      "attention_rate_rating_position": 2,
      "id": 1200,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 10,
    },
  ],
}
`;

exports[`Platform should process next round correctly 10`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "platform",
      "airdrop": "",
      "platform_name": "test_platform",
      "registered_attention_rate": "600.00000000000000000",
      "registered_user_count": 4,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "2313899131.2000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "600.00000000000000000",
      "total_user_count": 4,
      "updating": 0,
    },
  ],
}
`;

exports[`Platform should process next round correctly 11`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "registered_attention_rate": "600.00000000000000000",
      "registered_user_count": 4,
      "round_sent_account_count": 4,
      "round_supply": "2313899131.2000 SNAX",
      "round_updated_account_count": 4,
      "sent_amount": "2313899131.2000 SNAX",
      "step_number": 0,
      "total_attention_rate": "600.00000000000000000",
      "total_user_count": 4,
    },
  ],
}
`;

exports[`Platform should process next round correctly 12`] = `
Array [
  Object {
    "id": 123,
    "last_paid_step_number": 0,
    "name": "testacc1",
    "stat_diff": Array [
      50,
      11,
      25,
      50,
    ],
    "verification_salt": "12345",
    "verification_tweet": "1083836521751478272",
  },
  Object {
    "id": 1007,
    "last_paid_step_number": 0,
    "name": "testacc1",
    "stat_diff": Array [
      51,
      10,
      210,
      30,
    ],
    "verification_salt": "12345",
    "verification_tweet": "1083836521751478272",
  },
  Object {
    "id": 1105,
    "last_paid_step_number": 0,
    "name": "testacc2",
    "stat_diff": Array [
      5,
      10,
      20,
      30,
    ],
    "verification_salt": "12345",
    "verification_tweet": "1083836521751478272",
  },
  Object {
    "id": 1200,
    "last_paid_step_number": 0,
    "name": "testacc2",
    "stat_diff": Array [
      51,
      120,
      210,
      30,
    ],
    "verification_salt": "12345",
    "verification_tweet": "1083836521751478272",
  },
]
`;

exports[`Platform should process next round correctly 13`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "attention_rate": "0.00000000000000000",
      "attention_rate_rating_position": 4294967295,
      "id": 123,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 6,
    },
    Object {
      "attention_rate": "300.00000000000000000",
      "attention_rate_rating_position": 1,
      "id": 1007,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 10,
    },
    Object {
      "attention_rate": "50.00000000000000000",
      "attention_rate_rating_position": 3,
      "id": 1105,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 10,
    },
    Object {
      "attention_rate": "250.00000000000000000",
      "attention_rate_rating_position": 2,
      "id": 1200,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 10,
    },
  ],
}
`;

exports[`Platform should process next round correctly 14`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1156949565.6000 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1156950553.1744 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`Platform should process social transfer correctly 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "amount": "20.0000 SNAX",
      "id": 15,
    },
  ],
}
`;

exports[`Platform should process social transfer correctly 2`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "980.0000 SNAX",
      },
      Object {
        "balance": "1000.0000 SNIX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`Platform should process social transfer correctly 3`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Platform should process social transfer correctly 4`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "980.0000 SNAX",
      },
      Object {
        "balance": "1000.0000 SNIX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "20.0000 SNAX",
      },
    ],
  },
]
`;

exports[`Platform should process social transfers with different assets correctly 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "amount": "20.0000 SNAX",
      "id": 16,
    },
    Object {
      "amount": "20.0000 SNAX",
      "id": 17,
    },
  ],
}
`;

exports[`Platform should process social transfers with different assets correctly 2`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "amount": "20.0000 SNIX",
      "id": 15,
    },
    Object {
      "amount": "20.0000 SNIX",
      "id": 30,
    },
  ],
}
`;

exports[`Platform should process social transfers with different assets correctly 3`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "960.0000 SNAX",
      },
      Object {
        "balance": "960.0000 SNIX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`Platform should process social transfers with different assets correctly 4`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "amount": "20.0000 SNAX",
      "id": 16,
    },
    Object {
      "amount": "20.0000 SNAX",
      "id": 17,
    },
  ],
}
`;

exports[`Platform should process social transfers with different assets correctly 5`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "amount": "20.0000 SNIX",
      "id": 15,
    },
    Object {
      "amount": "20.0000 SNIX",
      "id": 30,
    },
  ],
}
`;

exports[`Platform should process social transfers with different assets correctly 6`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "960.0000 SNAX",
      },
      Object {
        "balance": "960.0000 SNIX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`Platform should update account's attention rate correctly 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "platform",
      "airdrop": "",
      "platform_name": "test_platform",
      "registered_attention_rate": "20.00000000000000000",
      "registered_user_count": 1,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "0.0000 SNAX",
      "step_number": 0,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "20.00000000000000000",
      "total_user_count": 1,
      "updating": 1,
    },
  ],
}
`;

exports[`Platform should update account's attention rate correctly 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Platform should update account's attention rate correctly 3`] = `
Array [
  Object {
    "id": 123,
    "last_paid_step_number": 0,
    "name": "test2",
    "stat_diff": Array [
      5,
      10,
      20,
      30,
    ],
    "verification_salt": "12345",
    "verification_tweet": "1083836521751478272",
  },
]
`;

exports[`Platform should update account's attention rate correctly 4`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "attention_rate": "20.00000000000000000",
      "attention_rate_rating_position": 1,
      "id": 123,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 7,
    },
  ],
}
`;

exports[`Platform should update multiple account's attention rate correctly 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "platform",
      "airdrop": "",
      "platform_name": "test_platform",
      "registered_attention_rate": "45.00000000000000000",
      "registered_user_count": 2,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 2,
      "sent_amount": "0.0000 SNAX",
      "step_number": 0,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "45.00000000000000000",
      "total_user_count": 2,
      "updating": 1,
    },
  ],
}
`;

exports[`Platform should update multiple account's attention rate correctly 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Platform should update multiple account's attention rate correctly 3`] = `
Array [
  Object {
    "id": 123,
    "last_paid_step_number": 0,
    "name": "test2",
    "stat_diff": Array [
      5,
      10,
      20,
      30,
    ],
    "verification_salt": "12345",
    "verification_tweet": "1083836521751478272",
  },
  Object {
    "id": 243,
    "last_paid_step_number": 0,
    "name": "test1",
    "stat_diff": Array [
      5,
      10,
      20,
      30,
    ],
    "verification_salt": "12345",
    "verification_tweet": "1083836521751478272",
  },
]
`;

exports[`Platform should update multiple account's attention rate correctly 4`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "attention_rate": "25.00000000000000000",
      "attention_rate_rating_position": 1,
      "id": 123,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 10,
    },
    Object {
      "attention_rate": "20.00000000000000000",
      "attention_rate_rating_position": 2,
      "id": 243,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 6,
    },
  ],
}
`;

exports[`Platform should work with pending account correctly 1`] = `Array []`;

exports[`Platform should work with pending account correctly 2`] = `
Array [
  Object {
    "account": "test1",
    "id": 42,
  },
]
`;

exports[`Platform should work with pending account correctly 3`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "platform",
      "airdrop": "",
      "platform_name": "test_platform",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 0,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "0.0000 SNAX",
      "step_number": 0,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "0.00000000000000000",
      "total_user_count": 0,
      "updating": 0,
    },
  ],
}
`;

exports[`Platform should work with pending account correctly 4`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Platform should work with pending account correctly 5`] = `Array []`;

exports[`Platform should work with pending account correctly 6`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Platform should work with pending account correctly 7`] = `Array []`;

exports[`Platform should work with pending account correctly 8`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "platform",
      "airdrop": "",
      "platform_name": "test_platform",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 1,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "0.0000 SNAX",
      "step_number": 0,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "0.00000000000000000",
      "total_user_count": 1,
      "updating": 0,
    },
  ],
}
`;

exports[`Platform should work with pending account correctly 9`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Platform should work with pending account correctly 10`] = `
Array [
  Object {
    "id": 42,
    "last_paid_step_number": 0,
    "name": "test1",
    "stat_diff": Array [
      5,
      10,
      15,
    ],
    "verification_salt": "12345",
    "verification_tweet": "1083836521751478272",
  },
]
`;

exports[`Platform should work with pending account correctly 11`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "attention_rate": "0.00000000000000000",
      "attention_rate_rating_position": 0,
      "id": 42,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 0,
    },
  ],
}
`;

exports[`Platform shouldn't be able to add user with the same id second time 1`] = `"missing addaccount.id (type=uint64)"`;

exports[`Platform shouldn't be able to add user with the same id second time 2`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "platform",
      "airdrop": "",
      "platform_name": "test_platform",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 1,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "0.0000 SNAX",
      "step_number": 0,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "0.00000000000000000",
      "total_user_count": 1,
      "updating": 0,
    },
  ],
}
`;

exports[`Platform shouldn't be able to add user with the same id second time 3`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Platform shouldn't be able to add user with the same id second time 4`] = `
Array [
  Object {
    "id": 123,
    "last_paid_step_number": 0,
    "name": "test2",
    "stat_diff": Array [
      5,
      10,
      15,
    ],
    "verification_salt": "12345",
    "verification_tweet": "1083836521751478272",
  },
]
`;

exports[`Platform shouldn't be able to add user with the same id second time 5`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "attention_rate": "0.00000000000000000",
      "attention_rate_rating_position": 0,
      "id": 123,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 0,
    },
  ],
}
`;

exports[`Platform shouldn't be able to initialize second time 1`] = `"assertion failure with message: platform is already initialized"`;

exports[`Platform shouldn't be able to initialize second time 2`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "platform",
      "airdrop": "",
      "platform_name": "test_platform",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 0,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "0.0000 SNAX",
      "step_number": 0,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "0.00000000000000000",
      "total_user_count": 0,
      "updating": 0,
    },
  ],
}
`;

exports[`Platform shouldn't be able to initialize second time 3`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Platform shouldn't be able to initialize second time 4`] = `Array []`;

exports[`Platform shouldn't be able to initialize second time 5`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Platform shouldn't be able to update attention rate when platform is updating 1`] = `"assertion failure with message: platform must be in updating state 1 when updatear action is called"`;

exports[`Platform shouldn't be able to update attention rate when platform is updating 2`] = `"assertion failure with message: platform must be in updating state 1 when updatearmult action is called"`;

exports[`Platform shouldn't be able to update attention rate when platform is updating 3`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "platform",
      "airdrop": "",
      "platform_name": "test_platform",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 1,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "0.0000 SNAX",
      "step_number": 0,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "0.00000000000000000",
      "total_user_count": 1,
      "updating": 2,
    },
  ],
}
`;

exports[`Platform shouldn't be able to update attention rate when platform is updating 4`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Platform shouldn't be able to update attention rate when platform is updating 5`] = `
Array [
  Object {
    "id": 1105,
    "last_paid_step_number": 0,
    "name": "test1",
    "stat_diff": Array [
      5,
      10,
      15,
    ],
    "verification_salt": "12345",
    "verification_tweet": "1083836521751478272",
  },
]
`;

exports[`Platform shouldn't be able to update attention rate when platform is updating 6`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "attention_rate": "0.00000000000000000",
      "attention_rate_rating_position": 0,
      "id": 1105,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 0,
    },
  ],
}
`;

exports[`Platform shouldn't be able to update attention rate when platform isnt in updating ar state 1`] = `"assertion failure with message: platform must be in updating state 1 when updatear action is called"`;

exports[`Platform shouldn't be able to update attention rate when platform isnt in updating ar state 2`] = `"assertion failure with message: platform must be in updating state 1 when updatearmult action is called"`;

exports[`Platform shouldn't be able to update attention rate when platform isnt in updating ar state 3`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "platform",
      "airdrop": "",
      "platform_name": "test_platform",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 1,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "0.0000 SNAX",
      "step_number": 0,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "0.00000000000000000",
      "total_user_count": 1,
      "updating": 0,
    },
  ],
}
`;

exports[`Platform shouldn't be able to update attention rate when platform isnt in updating ar state 4`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Platform shouldn't be able to update attention rate when platform isnt in updating ar state 5`] = `
Array [
  Object {
    "id": 1105,
    "last_paid_step_number": 0,
    "name": "test1",
    "stat_diff": Array [
      5,
      10,
      15,
    ],
    "verification_salt": "12345",
    "verification_tweet": "1083836521751478272",
  },
]
`;

exports[`Platform shouldn't be able to update attention rate when platform isnt in updating ar state 6`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "attention_rate": "0.00000000000000000",
      "attention_rate_rating_position": 0,
      "id": 1105,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 0,
    },
  ],
}
`;

exports[`Platform shouldn't be able to update non-existent account's attention rate 1`] = `"assertion failure with message: platform must be in updating state 1 when updatear action is called"`;

exports[`Platform shouldn't be able to update non-existent account's attention rate 2`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "platform",
      "airdrop": "",
      "platform_name": "test_platform",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 1,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "0.0000 SNAX",
      "step_number": 0,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "0.00000000000000000",
      "total_user_count": 1,
      "updating": 0,
    },
  ],
}
`;

exports[`Platform shouldn't be able to update non-existent account's attention rate 3`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Platform shouldn't be able to update non-existent account's attention rate 4`] = `
Array [
  Object {
    "id": 123,
    "last_paid_step_number": 0,
    "name": "test2",
    "stat_diff": Array [
      5,
      10,
      15,
    ],
    "verification_salt": "12345",
    "verification_tweet": "1083836521751478272",
  },
]
`;

exports[`Platform shouldn't be able to update non-existent account's attention rate 5`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "attention_rate": "0.00000000000000000",
      "attention_rate_rating_position": 0,
      "id": 123,
      "last_attention_rate_updated_step_number": 0,
      "tweets_ranked_in_last_period": 0,
    },
  ],
}
`;

exports[`Platform shouldnt be able to create user using newaccount method 1`] = `"assertion failure with message: platform or creator authority needed"`;

exports[`Platform shouldnt be able to create user using newaccount method 2`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "platform",
      "airdrop": "",
      "platform_name": "test_platform",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 0,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "0.0000 SNAX",
      "step_number": 0,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "0.00000000000000000",
      "total_user_count": 0,
      "updating": 0,
    },
  ],
}
`;

exports[`Platform shouldnt be able to create user using newaccount method 3`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Platform shouldnt be able to create user using newaccount method 4`] = `Array []`;

exports[`Platform shouldnt be able to create user using newaccount method 5`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;
